--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 }
 .bgimg{
-  background-image: url('https://c4.wallpaperflare.com/wallpaper/924/651/627/dark-fire-flame-hand-wallpaper-preview.jpg');
+  background-image: url('https://img.freepik.com/premium-vector/abstract-background_936206-1874.jpg?size=626&ext=jpg&ga=GA1.1.1803636316.1701561600&semt=ais');
   height: 100vh;
   width: 100%;
   background-size: cover;
@@ -23,5 +23,5 @@
 }
 .head{
   font-weight: 700;
-  color: rgb(239, 23, 23);
+  color: rgb(223, 237, 22);
 }
